# Kaggle-Playground-Repo

./: .gitignore  .gitmodules  README.md  data.dvc  main.py  pyproject.toml
.dvc/: config
S4/E10/: data_upload.py
S4/E11/: final_df.csv  rw.md  src.html  src.ipynb  submission.csv
S4/E11/.history/: rw_20241124193345.md  rw_20241124193437.md  rw_20241124193511.md  rw_20241125192214.md  rw_20241125192255.md  rw_20241125192339.md  rw_20241125192423.md  rw_20241125202618.md  rw_20241125202644.md  rw_20241127000623.md  rw_20241127001401.md  rw_20241127001453.md  rw_20241127001523.md  rw_20241127001555.md  rw_20241127001645.md  rw_20241127001703.md  rw_20241127001716.md  rw_20241127001740.md  rw_20241127132834.md  rw_20241127132839.md  rw_20241127132958.md  rw_20241127133118.md  rw_20241127133226.md  rw_20241127133246.md  rw_20241127134647.md  rw_20241127135132.md  rw_20241127135234.md  rw_20241127135240.md  rw_20241127135247.md  rw_20241127135312.md  rw_20241127135328.md  rw_20241127135329.md  rw_20241127141659.md
S4/E11/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
S4/E11/catboost_info/learn/: events.out.tfevents
S4/E11/catboost_info/test/: events.out.tfevents
kaggle_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
s6e1/: data_exploration.ipynb
