[project]
name = "kaggle-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.3,<=2.3.5",
    "pandas>=3.0.0",
    "pip>=25.3",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sklearn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlutils*"]

[tool.uv.workspace]
members = [
    "data",
]
